tests/ui/resolve/issue-21221-1.stderr
error[E0405]: cannot find trait `Mul` in this scope
  --> $DIR/issue-21221-1.rs:43:6
   |
LL | impl Mul for Foo {
   |      ^^^ not found in this scope
   |
help: consider importing one of these traits
   |
LL + use std::ops::Mul;
   |
LL + use mul1::Mul;
   |
LL + use mul2::Mul;
   |

error[E0412]: cannot find type `Mul` in this scope
  --> $DIR/issue-21221-1.rs:58:16
   |
LL | fn getMul() -> Mul {
   |                ^^^ not found in this scope
   |
note: these items exist but are inaccessible
  --> $DIR/issue-21221-1.rs:10:5
   |
LL |     enum Mul {
   |     ^^^^^^^^ `mul3::Mul`: not accessible
...
LL |     type Mul = String;
   |     ^^^^^^^^^^^^^^^^^^ `mul4::Mul`: not accessible
...
LL |     struct Mul{
   |     ^^^^^^^^^^ `mul5::Mul`: not accessible
help: consider importing one of these traits
   |
LL + use std::ops::Mul;
   |
LL + use mul1::Mul;
   |
LL + use mul2::Mul;
   |

error[E0405]: cannot find trait `ThisTraitReallyDoesntExistInAnyModuleReally` in this scope
  --> $DIR/issue-21221-1.rs:63:6
   |
LL | impl ThisTraitReallyDoesntExistInAnyModuleReally for Foo {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `Div` in this scope
  --> $DIR/issue-21221-1.rs:68:6
   |
LL | impl Div for Foo {
   |      ^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::ops::Div;
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0405, E0412.
For more information about an error, try `rustc --explain E0405`.
